// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`identifiers identifiers.js: frames 1`] = `
> 1 | foo();
    | ^^^
  2 | bar();
  3 | baz();
  4 | 

`;

exports[`identifiers identifiers.js: frames 2`] = `
> 1 | foo();
    | ^^^
  2 | bar();
  3 | baz();
  4 | 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  1 | foo();
> 2 | bar();
    | ^^^
  3 | baz();
  4 | 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  1 | foo();
  2 | bar();
> 3 | baz();
    | ^^^
  4 | 

`;

exports[`identifiers identifiers.js: raw 1`] = `

foo();

`;

exports[`identifiers identifiers.js: raw 2`] = `

foo();
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
bar();
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
baz();

`;
